# PaceLLM

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: enable_amb_qwen2.py
legacy/: README.md  modeling_qwen2.py
pacellm/: __init__.py  activation_memory_bank.py  cortical_expert_clustering.py  qwen2_integration.py
pacellm/cli/: cluster_qwen2_mlp.py
scripts/: cluster_qwen2_mlp.py
tests/: test_core.py
